ページ追加

--- a/pages/message/index.html
+++ b/pages/message/index.html
@@ -53,10 +53,59 @@
                     <div class ="letterBook">
                         <div class ="hard" style = "background-image: url(../../messages/楽譜表紙.jpg);"></div>
                         <div class ="hard">表紙裏</div>
-                        <div style = "background-image: url(../../messages/楽譜ピンク.jpg);"></div>
-                        <div style = "background-image: url(../../messages/楽譜黄色.jpg);"></div>
-                        <div style = "background-image: url(../../messages/楽譜水色.jpg);"></div>
-                        <div style = "background-image: url(../../messages/楽譜緑.jpg);"></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-しば.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-みずきち.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-うしろまち むぎ.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-ハル.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-Findstr.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-ゆゆきち.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-lanbery.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-ごんじん.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-＃kim.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-シマワージ.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-玉子焼きかけご飯.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-陸別.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-いずのあいちゃん.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-李 塁治.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-ムラツキ.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-おさむ.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-picapica.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-キングカズキ.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-はりまろん.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-草色.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-金字塔.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-にっと.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-ユユム.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-あーる。.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-ドルビー.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-たわ.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-ウェイク.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-海風ソラタ.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-llenn蓮.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-すみたく.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-出口.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-ひろくん.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-いずあん.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-あややー.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-しゅーや.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-ラテ.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-アカキアカ.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-りぐとね.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-モノ.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-無のギンジ.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-なかさん.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-ちて.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-まるほい.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-スイカ.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-自宅警備員たなか.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-Suzuka.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-kenny.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-めろんさわー.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-全力幼女.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-ほわぁ.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-あれれんれん.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-くま.jpg);""></div>
+                        <div style = ""background-image: url(../../messages/メッセージ-えぽ！.jpg);""></div>
                         <div class ="hard">裏表紙裏</div>
                         <div class ="hard" style = "background-image: url(../../messages/楽譜裏表紙2.jpg);"></div>
                     </div>
