画像サイズ、メッセージ命名規則の修正

--- a/pages/message/index.html
+++ b/pages/message/index.html
@@ -53,59 +53,59 @@
                     <div class ="letterBook">
                         <div class ="hard" style = "background-image: url(../../messages/楽譜表紙.jpg);"></div>
                         <div class ="hard">表紙裏</div>
-                        <div style = ""background-image: url(../../messages/メッセージ-しば.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-みずきち.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-うしろまち むぎ.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-ハル.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-Findstr.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-ゆゆきち.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-lanbery.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-ごんじん.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-＃kim.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-シマワージ.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-玉子焼きかけご飯.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-陸別.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-いずのあいちゃん.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-李 塁治.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-ムラツキ.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-おさむ.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-picapica.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-キングカズキ.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-はりまろん.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-草色.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-金字塔.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-にっと.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-ユユム.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-あーる。.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-ドルビー.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-たわ.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-ウェイク.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-海風ソラタ.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-llenn蓮.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-すみたく.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-出口.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-ひろくん.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-いずあん.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-あややー.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-しゅーや.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-ラテ.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-アカキアカ.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-りぐとね.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-モノ.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-無のギンジ.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-なかさん.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-ちて.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-まるほい.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-スイカ.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-自宅警備員たなか.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-Suzuka.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-kenny.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-めろんさわー.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-全力幼女.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-ほわぁ.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-あれれんれん.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-くま.png);""></div>
-                        <div style = ""background-image: url(../../messages/メッセージ-えぽ！.png);""></div>
+                        <div style = "background-image: url(../../messages/メッセージ-しば.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-みずきち.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-うしろまちむぎ.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-ハル.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-Findstr.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-ゆゆきち.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-lanbery.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-ごんじん.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-＃kim.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-シマワージ.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-玉子焼きかけご飯.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-陸別.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-いずのあいちゃん.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-李塁治.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-ムラツキ.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-おさむ.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-picapica.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-キングカズキ.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-はりまろん.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-草色.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-金字塔.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-にっと.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-ユユム.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-あーる。.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-ドルビー.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-たわ.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-ウェイク.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-海風ソラタ.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-llenn蓮.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-すみたく.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-出口.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-ひろくん.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-いずあん.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-あややー.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-しゅーや.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-ラテ.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-アカキアカ.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-りぐとね.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-モノ.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-無のギンジ.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-なかさん.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-ちて.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-まるほい.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-スイカ.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-自宅警備員たなか.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-Suzuka.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-kenny.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-めろんさわー.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-全力幼女.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-ほわぁ.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-あれれんれん.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-くま.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-えぽ！.png);"></div>
                         <div class ="hard">裏表紙裏</div>
                         <div class ="hard" style = "background-image: url(../../messages/楽譜裏表紙2.jpg);"></div>
                     </div>
