--- a/pages/message/index.html
+++ b/pages/message/index.html
@@ -105,7 +105,25 @@
                         <div style = "background-image: url(../../messages/メッセージ-ほわぁ.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-あれれんれん.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-くま.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-バウムクーヘン.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-ユッキー：幸希.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-yuki.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-うーちゃん.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-ミケ.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-みとりん.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-顔長マン.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-ゆずころ.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-なかはま.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-けいどら.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-さとつぺ.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-よーい.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-コン.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-ラディア.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-いんぷれざ.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-〆.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-ノギ.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-えぽ！.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-琉加るか.png);"></div>
                         <div class ="hard" style = "background-image: url(../../messages/裏表紙裏.JPG);"></div>
                         <div class ="hard" style = "background-image: url(../../messages/楽譜裏表紙2.jpg);"></div>
                     </div>
