--- a/pages/message/index.html
+++ b/pages/message/index.html
@@ -52,7 +52,7 @@
                 <div class = "container">
                     <div class ="letterBook">
                         <div class ="hard" style = "background-image: url(../../messages/楽譜表紙.jpg);"></div>
-                        <div class ="hard">表紙裏</div>
+                        <div class ="hard" style = "background-image: url(../../messages/表紙裏.PNG);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-しば.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-みずきち.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-うしろまちむぎ.png);"></div>
