--- a/pages/message/index.html
+++ b/pages/message/index.html
@@ -122,6 +122,12 @@
                         <div style = "background-image: url(../../messages/メッセージ-いんぷれざ.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-〆.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-ノギ.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-かいゆー.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-幻音（そらね）.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-りゅりたん.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-薄荷.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-あんげ.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-ゆきち.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-えぽ！.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-琉加るか.png);"></div>
                         <div class ="hard" style = "background-image: url(../../messages/裏表紙裏.JPG);"></div>
