--- a/pages/message/index.html
+++ b/pages/message/index.html
@@ -128,7 +128,12 @@
                         <div style = "background-image: url(../../messages/メッセージ-薄荷.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-あんげ.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-ゆきち.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-電池兎.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-ジャスミン.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-半蔵.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-えぽ！.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-ひー.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-レバ.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-琉加るか.png);"></div>
                         <div class ="hard" style = "background-image: url(../../messages/裏表紙裏.JPG);"></div>
                         <div class ="hard" style = "background-image: url(../../messages/楽譜裏表紙2.jpg);"></div>
