石川のみ仮画像に変更

--- a/pages/illust/index.html
+++ b/pages/illust/index.html
@@ -68,7 +68,7 @@
 
         <!-- 石川 -->
         <section class="info-block">
-          <img src="../../images/駅広告-石川.png" alt="金沢駅イラスト" class="info-map">
+          <img src="../../images/駅広告-石川仮.png" alt="金沢駅イラスト" class="info-map">
           <p class="info-place">掲出場所：IRいしかわ鉄道 金沢駅</p>
           <p class="info-date">イラスト：さいだもーすさん</p>
         </section>
