全ページ背景を変更、その他気になったところの修正

--- a/pages/message/index.html
+++ b/pages/message/index.html
@@ -28,7 +28,7 @@
     <header>
         <div class="header">
             <div class="header-title">
-                <a href="../../index.html" class="logo">Kannkann企画</a>
+                <a href="../../index.html" class="logo">菅叶和さんお誕生日企画2025</a>
                 <span class="current-page">＞ メッセージ</span>
             </div>
         </div>
@@ -51,7 +51,7 @@
             <div class = "letterBook-viewport">
                 <div class = "container">
                     <div class ="letterBook">
-                        <div class ="hard" style = "background-image: url(../../messages/楽譜表紙.jpg);"></div>
+                        <div class ="hard" style = "background-image: url(../../messages/楽譜表紙small.jpg);"></div>
                         <div class ="hard" style = "background-image: url(../../messages/表紙裏.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-しば.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-みずきち.png);"></div>
@@ -132,18 +132,24 @@
                         <div style = "background-image: url(../../messages/メッセージ-ジャスミン.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-半蔵.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-えぽ！.png);"></div>
-                        <div style = "background-image: url(../../messages/メッセージ-ひー.png);"></div>
-                        <div style = "background-image: url(../../messages/メッセージ-レバ.png);"></div>
-                        <div style = "background-image: url(../../messages/メッセージ-琉加るか.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-ひー.png);">
+                            <p>ひーさんメッセージ準備中</p>
+                        </div>
+                        <div style = "background-image: url(../../messages/メッセージ-レバ.png);">
+                            <p>レバさんメッセージ準備中</p>
+                        </div>
+                        <div style = "background-image: url(../../messages/メッセージ-琉加るか.png);">
+
+                        </div>
                         <div class ="hard" style = "background-image: url(../../messages/裏表紙裏.JPG);"></div>
-                        <div class ="hard" style = "background-image: url(../../messages/楽譜裏表紙2.jpg);"></div>
+                        <div class ="hard" style = "background-image: url(../../messages/楽譜裏表紙2small.jpg);"></div>
                     </div>
                 </div>
             </div>
 
             <script type="text/javascript">
                 const ASPECT_RATIO = 1.536; // 922 / 600
-                const TOTAL_PAGES = 80; // ★総ページ数: 50ページを設定★
+                const TOTAL_PAGES = 86; // ★総ページ数: 50ページを設定★
 
                 // 現在のウィンドウ幅に基づいて、本の新しいサイズ（ピクセル値）を計算する関数
                 function calculateBookSize() {
@@ -257,9 +263,13 @@
             </script>
         <div class="page-jump-controls">
             <label for="page-input">ページ:</label>
-            <input type="number" id="page-input" min="1" max="80" value="1">
-            <span class="page-info">/ 80 ページ</span>
+            <input type="number" id="page-input" min="1" max="86" value="1">
+            <span class="page-info">/ 86 ページ</span>
             <button id="jump-button">ジャンプ</button>
+        </div>
+                <div class = "text">
+            <p>ページをめくってみてね！</p>
+            <p>ページをタップすると拡大されます！</p>
         </div>
         </main>
         <!--mainここまで-->
