--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header>
 
       <div class="header">
-        <a href="index.html" class="logo">Kannkann企画</a>
+        <a href="index.html" class="logo">菅叶和さんお誕生日企画2025</a>
       </div>
 
       <nav id="menu" class="side-menu">
@@ -44,7 +44,7 @@
     <!-- headerここまで-->
 
 
-   <!-- mainここから-->
+<!-- mainここから-->
 <main>
   <div class="swiper-container mySwiper">
       <div class="swiper-wrapper">
@@ -58,6 +58,7 @@
               <img src="images/駅広告-愛知.png" alt="愛知イラスト" style="width: 100%; height: auto;">
           </div>
           <div class="swiper-slide">
+              <!--<img src="images/駅広告-石川.png" alt="石川イラスト" style="width: 100%; height: auto;">-->
               <img src="images/駅広告-石川仮.png" alt="石川イラスト" style="width: 100%; height: auto;">
           </div>
       </div>
@@ -73,6 +74,7 @@
     <h3>📢お知らせ</h3>
     <p>・サイトオープンしました！</p>
     <p>・11/17正午より駅広告掲出開始！</p>
+    <p>・金沢駅のイラストは11/18に公開されます</p>
 
   </div>
 
@@ -95,6 +97,7 @@
 
       <a href="pages/illust/" class="info-card card-illust">
           <div class="card-image">
+            <!--<img src="images/駅広告-ALL.png" alt="イラストプレビュー">-->
               <img src="images/仮画像.jpg" alt="イラストプレビュー">
           </div>
           <div class="card-text-content">
