--- a/pages/illust/index.html
+++ b/pages/illust/index.html
@@ -22,7 +22,7 @@
   <header>
     <div class="header">
       <div class="header-title">
-        <a href="../../index.html" class="logo">Kannkann企画</a>
+        <a href="../../index.html" class="logo">菅叶和さんお誕生日企画2025</a>
         <span class="current-page">＞ イラスト</span>
       </div>
     </div>
@@ -68,6 +68,7 @@
 
         <!-- 石川 -->
         <section class="info-block">
+          <!--<img src="../../images/駅広告-石川.png" alt="金沢駅イラスト" class="info-map">-->
           <img src="../../images/駅広告-石川仮.png" alt="金沢駅イラスト" class="info-map">
           <p class="info-place">掲出場所：IRいしかわ鉄道 金沢駅</p>
           <p class="info-date">イラスト：さいだもーすさん</p>
