--- a/pages/message/index.html
+++ b/pages/message/index.html
@@ -120,8 +120,6 @@
                         <div style = "background-image: url(../../messages/メッセージ-コン.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-ラディア.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-いんぷれざ.png);"></div>
-                        <div style = "background-image: url(../../messages/メッセージ-〆.png);"></div>
-                        <div style = "background-image: url(../../messages/メッセージ-ノギ.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-かいゆー.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-幻音（そらね）.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-りゅりたん.png);"></div>
@@ -129,15 +127,16 @@
                         <div style = "background-image: url(../../messages/メッセージ-あんげ.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-ゆきち.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-電池兎.png);"></div>
-                        <div style = "background-image: url(../../messages/メッセージ-ジャスミン.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-ジャンスン.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-半蔵.png);"></div>
+                        <div style ="background-image: url(../../messages/メッセージ-なぃろ.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-肩乗りきつね.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-みけぬこ.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-〆.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-ノギ.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-えぽ！.png);"></div>
-                        <div style = "background-image: url(../../messages/メッセージ-ひー.png);">
-                            <p>ひーさんメッセージ準備中</p>
-                        </div>
-                        <div style = "background-image: url(../../messages/メッセージ-レバ.png);">
-                            <p>レバさんメッセージ準備中</p>
-                        </div>
+                        <div style = "background-image: url(../../messages/メッセージ-レバ.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-ひー.png);"></div>"
                         <div style = "background-image: url(../../messages/メッセージ-琉加るか.png);">
 
                         </div>
