--- a/pages/message/index.html
+++ b/pages/message/index.html
@@ -135,8 +135,8 @@
                         <div style = "background-image: url(../../messages/メッセージ-〆.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-ノギ.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-えぽ！.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-ひー.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-レバ.png);"></div>
-                        <div style = "background-image: url(../../messages/メッセージ-ひー.png);"></div>"
                         <div style = "background-image: url(../../messages/メッセージ-琉加るか.png);">
 
                         </div>
