偶数ページになるように調整

--- a/pages/message/index.html
+++ b/pages/message/index.html
@@ -138,6 +138,7 @@
                         <div style = "background-image: url(../../messages/メッセージ-ひー.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-レバ.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-琉加るか.png);"></div>
+                        <div style = "background-image: url(../../messages/裏表紙サブ.jpg);"></div>
                         <div class ="hard" style = "background-image: url(../../messages/裏表紙裏.JPG);"></div>
                         <div class ="hard" style = "background-image: url(../../messages/楽譜裏表紙2small.jpg);"></div>
                     </div>
@@ -146,7 +147,7 @@
 
             <script type="text/javascript">
                 const ASPECT_RATIO = 1.536; // 922 / 600
-                const TOTAL_PAGES = 86; // ★総ページ数: 50ページを設定★
+                const TOTAL_PAGES = 90; // ★総ページ数: 50ページを設定★
 
                 // 現在のウィンドウ幅に基づいて、本の新しいサイズ（ピクセル値）を計算する関数
                 function calculateBookSize() {
@@ -260,8 +261,8 @@
             </script>
         <div class="page-jump-controls">
             <label for="page-input">ページ:</label>
-            <input type="number" id="page-input" min="1" max="86" value="1">
-            <span class="page-info">/ 86 ページ</span>
+            <input type="number" id="page-input" min="1" max="90" value="1">
+            <span class="page-info">/ 90 ページ</span>
             <button id="jump-button">ジャンプ</button>
         </div>
                 <div class = "text">
