--- a/pages/message/index.html
+++ b/pages/message/index.html
@@ -132,6 +132,8 @@
                         <div style ="background-image: url(../../messages/メッセージ-なぃろ.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-肩乗りきつね.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-みけぬこ.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-さば.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-ロブ汰.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-〆.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-ノギ.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-えぽ！.png);"></div>
