--- a/pages/message/index.html
+++ b/pages/message/index.html
@@ -134,13 +134,13 @@
                         <div style = "background-image: url(../../messages/メッセージ-みけぬこ.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-さば.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-ロブ汰.png);"></div>
+                        <div style = "background-image: url(../../messages/メッセージ-かなと.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-〆.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-ノギ.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-えぽ！.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-ひー.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-レバ.png);"></div>
                         <div style = "background-image: url(../../messages/メッセージ-琉加るか.png);"></div>
-                        <div style = "background-image: url(../../messages/裏表紙サブ.jpg);"></div>
                         <div class ="hard" style = "background-image: url(../../messages/裏表紙裏.JPG);"></div>
                         <div class ="hard" style = "background-image: url(../../messages/楽譜裏表紙2small.jpg);"></div>
                     </div>
