細かい修正

--- a/pages/information/index.html
+++ b/pages/information/index.html
@@ -22,7 +22,7 @@
   <header>
     <div class="header">
       <div class="header-title">
-        <a href="../../index.html" class="logo">Kannkann企画</a>
+        <a href="../../index.html" class="logo">菅叶和さんお誕生日企画2025</a>
         <span class="current-page">＞ インフォメーション</span>
       </div>
     </div>
