仮画像をすべて置き換え

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </div>
           <div class="swiper-slide">
               <!--<img src="images/駅広告-石川.png" alt="石川イラスト" style="width: 100%; height: auto;">-->
-              <img src="images/駅広告-石川仮.png" alt="石川イラスト" style="width: 100%; height: auto;">
+              <img src="images/駅広告-石川.png" alt="石川イラスト" style="width: 100%; height: auto;">
           </div>
       </div>
       
@@ -97,8 +97,7 @@
 
       <a href="pages/illust/" class="info-card card-illust">
           <div class="card-image">
-            <!--<img src="images/駅広告-ALL.png" alt="イラストプレビュー">-->
-              <img src="images/仮画像.jpg" alt="イラストプレビュー">
+            <img src="images/駅広告-ALL.png" alt="イラストプレビュー">
           </div>
           <div class="card-text-content">
               <h3>イラスト</h3>
